# RealTimeAnimation

./: .gitignore  Assignment4-Final.sln  CMakeLists.txt  lab001.sln
lab001/: Animator.h  Camera.h  Cone.cpp  Cone.h  Cube.cpp  Cube.hpp  CubeMap.cpp  CubeMap.hpp  FormController.h  Geometry.cpp  Geometry.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  MyForm.h  Plane.h  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  WaterFrameBuffers.cpp  WaterFrameBuffers.h  homebrew.sh  lab001.vcxproj  lab001.vcxproj.filters  main.cpp  model.h  start.bat
lab001/Debug/: vc120.idb
lab001/Debug/lab001.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  lab001.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab001/shaders/: blinnPhong.frag  cube1.vert  cube2.frag  cube3.frag  lighting.frag  lighting.vert  reflect.frag  reflectAndRefract.frag  reflectAndRefract.vert  refract.frag  refract.vert  shadow.frag  shadow.vert  simpleDepth.vert  simpleReflect.frag  skybox.vert  water.frag  water.vert
models/: bob.blend  bob.blend1  bob.dae  bob.fbx  boblampclean.md5anim  cube.dae  finger.dae  finger.mtl  handgun.fbx  marine.md5anim  marine.md5mesh  marine_anims.dae  marine_fbx.dae  marine_run.md5anim  monkey_MODEL.dae  untitled.dae
models/cs_estate/: cs_estate.fbx
shaders/: cube1.vert  lighting.frag  lighting.vert  simple.vert  simpleReflect.frag  simpleReflect.vert
